[package]
name = "paper-latest"
description = "Downloads the latest build from PaperMC"
keywords = ["papermc"]
categories = ["command-line-utilities"]
version = "0.1.3"
authors = ["Octavia Togami <octavia.togami@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/octylFractal/paper-latest"

[dependencies]
structopt = "0.3.26"
anyhow = "1.0.97"
sha2 = "0.10.8"
hex = "0.4.3"
console = "0.15.11"
indicatif = "0.17.11"

[dependencies.serde]
version = "1.0.218"
features = ["derive"]

[dependencies.attohttpc]
version = "0.29.1"
default-features = false
features = ["json", "tls-rustls"]
